--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".PrefActivity"/>
         <activity android:name=".ChoixConvActivity"/>
+        <activity android:name=".ShowConvActivity"/>
     </application>
 
 </manifest>
