Ajout Gestion Compte
ajout création compte
ajout changement mot de passe

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".PrefActivity_"/>
         <activity android:name=".ChoixConvActivity"/>
         <activity android:name=".ShowConvActivity"/>
+        <activity android:name=".CompteActivity"/>
+        <activity android:name=".CreateCompteActivity"/>
     </application>
 
 </manifest>
